<?xml version="1.0"?>
<package format="2">
  <name>imu_calibration</name>
  <version>0.0.0</version>
  <description>The imu calibration package</description>

  <maintainer email="nicolas.duc@op.pl">Nicolas Duc</maintainer>

  <license>MIT</license>

  <maintainer email="nicolas.duc@op.pl">Nicolas Duc</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
